# pturso

./: .gitignore  README.md  gleam.toml  mise.toml
.github/workflows/: release.yml  test.yml
rust/: Cargo.toml  LICENSE.txt
rust/src/: main.rs  port.rs
src/: pturso.gleam  pturso_bincode.erl  pturso_ffi.erl  pturso_port.erl
test/: pturso_bincode_test.erl  pturso_integration_test.erl  pturso_test.gleam
