[package]
name = "erso"
version = "0.1.0"
edition = "2024"
authors = ["Nigel Baillie <nigel@baillie.dev>"]
description = "Bridge program that allows Erlang to access Turso databases. Built for the pturso Gleam library."
license-file = "LICENSE.txt"
repository = "https://github.com/Resonious/pturso"

[dependencies]
pmrpc = "2.0.0"
tokio = { version = "1.48.0", features = ["full"] }
turso = "0.3.2"
wincode = { version = "0.2.5", features = ["derive"] }

[target.'cfg(target_os = "android")'.dependencies]
aegis = { version = "0.9.7", features = ["pure-rust"] }
